objects/Property__c/fields/Amenities__c.field-meta.xml
<CustomField>
    <fullName>Amenities__c</fullName>
    <label>Outdoor Amenities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fitness Centre</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Swimming Pools</fullName>
            </value>
            <value>
                <fullName>Spa</fullName>
            </value>
            <value>
                <fullName>Billiards Table</fullName>
            </value>
            <value>
                <fullName>Package Lockers</fullName>
            </value>
            <value>
                <fullName>Playgrounds</fullName>
            </value>
            <value>
                <fullName>Walking Paths</fullName>
            </value>
            <value>
                <fullName>Pet-friendly spaces</fullName>
            </value>
            <value>
                <fullName>Parks</fullName>
            </value>
            <value>
                <fullName>Valet Trash</fullName>
            </value>
            <value>
                <fullName>Surveillance cameras</fullName>
            </value>
            <value>
                <fullName>Green Surrounding Neighborhood</fullName>
            </value>
            <value>
                <fullName>Building Wi-Fi</fullName>
            </value>
            <value>
                <fullName>Clubhouse</fullName>
            </value>
            <value>
                <fullName>Party room</fullName>
            </value>
            <value>
                <fullName>Social area or Rooftop garden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>