objects/Property__c/fields/Clubhouse_Amenities__c.field-meta.xml
<CustomField>
    <fullName>Clubhouse_Amenities__c</fullName>
    <label>Clubhouse Amenities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mini Theatre</fullName>
            </value>
            <value>
                <fullName>Multi-Purpose Hall With Pre-Function Lounge</fullName>
            </value>
            <value>
                <fullName>Steam, Sauna And Jacuzzi</fullName>
            </value>
            <value>
                <fullName>Unisex Salon And Spa</fullName>
            </value>
            <value>
                <fullName>Sky Cinemas</fullName>
            </value>
            <value>
                <fullName>Learning Centre</fullName>
            </value>
            <value>
                <fullName>Business Centre</fullName>
            </value>
            <value>
                <fullName>Conference Room</fullName>
            </value>
            <value>
                <fullName>Entertainment Lounge</fullName>
            </value>
            <value>
                <fullName>Party Terrace And Outdoor Dining</fullName>
            </value>
            <value>
                <fullName>Guest Bedrooms</fullName>
            </value>
            <value>
                <fullName>Private Terrace For Guest</fullName>
            </value>
            <value>
                <fullName>Arcade Room</fullName>
            </value>
            <value>
                <fullName>Billiards</fullName>
            </value>
            <value>
                <fullName>Board Games</fullName>
            </value>
            <value>
                <fullName>Table Tennis</fullName>
            </value>
            <value>
                <fullName>Hookey Ring Toss</fullName>
            </value>
            <value>
                <fullName>Air Hockey</fullName>
            </value>
            <value>
                <fullName>Dart Board</fullName>
            </value>
            <value>
                <fullName>Foosball</fullName>
            </value>
            <value>
                <fullName>Squash Court</fullName>
            </value>
            <value>
                <fullName>Badminton Court</fullName>
            </value>
            <value>
                <fullName>Cricket Simulator</fullName>
            </value>
            <value>
                <fullName>Zumba/Aerobics/Yoga</fullName>
            </value>
            <value>
                <fullName>Interactive Gym</fullName>
            </value>
            <value>
                <fullName>Gym</fullName>
            </value>
            <value>
                <fullName>Creche</fullName>
            </value>
            <value>
                <fullName>Kids Library</fullName>
            </value>
            <value>
                <fullName>Confined Kids Plaza</fullName>
            </value>
            <value>
                <fullName>Kids Rock Climbing Wall With Ball Pit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>