objects/Property__c/fields/Developer_Builder_Name__c.field-meta.xml
<CustomField>
    <fullName>Developer_Builder_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Developer/Builder Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Propertys</relationshipLabel>
    <relationshipName>Propertys</relationshipName>
    <type>Lookup</type>
</CustomField>