objects/Property__c/fields/Entertainment_Features__c.field-meta.xml
<CustomField>
    <fullName>Entertainment_Features__c</fullName>
    <label>Entertainment &amp; Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Multi-Purpose Lawn</fullName>
            </value>
            <value>
                <fullName>Central Basilica</fullName>
            </value>
            <value>
                <fullName>Campfire With Swing</fullName>
            </value>
            <value>
                <fullName>Bus And Shuttle Arrival</fullName>
            </value>
            <value>
                <fullName>Statue Of Hercules</fullName>
            </value>
            <value>
                <fullName>Entrance Plaza</fullName>
            </value>
            <value>
                <fullName>Air Pavilion</fullName>
            </value>
            <value>
                <fullName>Pet Park</fullName>
            </value>
            <value>
                <fullName>Imperial Avenue</fullName>
            </value>
            <value>
                <fullName>Tropical Forest With Elevated Walkway</fullName>
            </value>
            <value>
                <fullName>Labyrinth Garden</fullName>
            </value>
            <value>
                <fullName>Apollo Garden</fullName>
            </value>
            <value>
                <fullName>Soul Garden</fullName>
            </value>
            <value>
                <fullName>Leisure Pavilion</fullName>
            </value>
            <value>
                <fullName>Tethy&apos;s Pavilion</fullName>
            </value>
            <value>
                <fullName>Tethy&apos;s Picnic</fullName>
            </value>
            <value>
                <fullName>Grass Mound With Hammock</fullName>
            </value>
            <value>
                <fullName>Herbs &amp; Spices Garden</fullName>
            </value>
            <value>
                <fullName>Hyacinth Garden</fullName>
            </value>
            <value>
                <fullName>Roman Bridge</fullName>
            </value>
            <value>
                <fullName>Lush Green Wall</fullName>
            </value>
            <value>
                <fullName>Augustine Of Hippo Statue Mound</fullName>
            </value>
            <value>
                <fullName>Rolling Mound</fullName>
            </value>
            <value>
                <fullName>Picnic Corner</fullName>
            </value>
            <value>
                <fullName>Shallow Pond With Island</fullName>
            </value>
            <value>
                <fullName>Aquileia Park</fullName>
            </value>
            <value>
                <fullName>Giant Trampoline</fullName>
            </value>
            <value>
                <fullName>Garden Seating Patio</fullName>
            </value>
            <value>
                <fullName>Corinth Canal</fullName>
            </value>
            <value>
                <fullName>Sports Gallery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>