objects/Property__c/fields/Exclusive_Sports_Courts__c.field-meta.xml
<CustomField>
    <fullName>Exclusive_Sports_Courts__c</fullName>
    <label>Exclusive Sports Courts</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exclusive Sports Courts</fullName>
            </value>
            <value>
                <fullName>Basketball Court</fullName>
            </value>
            <value>
                <fullName>Kho Kho Court</fullName>
            </value>
            <value>
                <fullName>Traditional Kabaddi Court</fullName>
            </value>
            <value>
                <fullName>Tennis Court</fullName>
            </value>
            <value>
                <fullName>Beach Volleyball Court</fullName>
            </value>
            <value>
                <fullName>Volleyball Court</fullName>
            </value>
            <value>
                <fullName>Futsal Court</fullName>
            </value>
            <value>
                <fullName>100 M Race Track</fullName>
            </value>
            <value>
                <fullName>Soccer Cage</fullName>
            </value>
            <value>
                <fullName>Walking And Jogging Track</fullName>
            </value>
            <value>
                <fullName>Box Cricket</fullName>
            </value>
            <value>
                <fullName>Cricket Practice Net</fullName>
            </value>
            <value>
                <fullName>Bicycle Track</fullName>
            </value>
            <value>
                <fullName>Archery</fullName>
            </value>
            <value>
                <fullName>Multi-Ring Basketball Court</fullName>
            </value>
            <value>
                <fullName>Skating/Skate Board Arena</fullName>
            </value>
            <value>
                <fullName>Outdoor Gym</fullName>
            </value>
            <value>
                <fullName>Outdoor Yoga Lawn</fullName>
            </value>
            <value>
                <fullName>Outdoor Yoga Deck</fullName>
            </value>
            <value>
                <fullName>Kids Play Area</fullName>
            </value>
            <value>
                <fullName>Floor Game Plaza</fullName>
            </value>
            <value>
                <fullName>Jungle Gym</fullName>
            </value>
            <value>
                <fullName>Adventure/Rock Wall Climbing For Kids</fullName>
            </value>
            <value>
                <fullName>Chalkboard Wall</fullName>
            </value>
            <value>
                <fullName>Hookey Ring Toss</fullName>
            </value>
            <value>
                <fullName>Mini Golf</fullName>
            </value>
            <value>
                <fullName>Giant Slingshot</fullName>
            </value>
            <value>
                <fullName>Sandpit</fullName>
            </value>
            <value>
                <fullName>Kids Trampoline Park</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>