objects/Property__c/fields/Facilities__c.field-meta.xml
<CustomField>
    <fullName>Facilities__c</fullName>
    <label>Facilities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bicycle Rack</fullName>
            </value>
            <value>
                <fullName>Car Wash Bay</fullName>
            </value>
            <value>
                <fullName>Car Charging Bay</fullName>
            </value>
            <value>
                <fullName>ATM</fullName>
            </value>
            <value>
                <fullName>Association Room</fullName>
            </value>
            <value>
                <fullName>Cafeteria</fullName>
            </value>
            <value>
                <fullName>FMS Room</fullName>
            </value>
            <value>
                <fullName>Convenio Store</fullName>
            </value>
            <value>
                <fullName>Pantry &amp; Kitchen With Party Hall</fullName>
            </value>
            <value>
                <fullName>Storage Room</fullName>
            </value>
            <value>
                <fullName>Clinic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>