objects/Property__c/fields/Location_Highlights__c.field-meta.xml
<CustomField>
    <fullName>Location_Highlights__c</fullName>
    <label>Location Highlights</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Near the Metro/Subway Station</fullName>
            </value>
            <value>
                <fullName>Downtown/City Center</fullName>
            </value>
            <value>
                <fullName>Near Office/Tech Parks or Business Districts</fullName>
            </value>
            <value>
                <fullName>Near Universities/Colleges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>