objects/Property__c/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <label>Property Address</label>
    <type>Address</type>
</CustomField>