objects/Property__c/fields/Property_Description__c.field-meta.xml
<CustomField>
    <fullName>Property_Description__c</fullName>
    <label>Property Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>