objects/Property__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mixed Use</fullName>
            </value>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Flats</fullName>
            </value>
            <value>
                <fullName>Individual House</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>Bungalows</fullName>
            </value>
            <value>
                <fullName>Farmhouse</fullName>
            </value>
            <value>
                <fullName>Beach houses</fullName>
            </value>
            <value>
                <fullName>Mobile homes</fullName>
            </value>
            <value>
                <fullName>Row Houses</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Office buildings</fullName>
            </value>
            <value>
                <fullName>Hotels</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Warehouses</fullName>
            </value>
            <value>
                <fullName>Factories</fullName>
            </value>
            <value>
                <fullName>Regional mall</fullName>
            </value>
            <value>
                <fullName>Strip center</fullName>
            </value>
            <value>
                <fullName>Outlet centers</fullName>
            </value>
            <value>
                <fullName>Power Center</fullName>
            </value>
            <value>
                <fullName>Restaurants</fullName>
            </value>
            <value>
                <fullName>Land</fullName>
            </value>
            <value>
                <fullName>Plot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>