objects/Property__c/fields/Site_Plan_Link__c.field-meta.xml
<CustomField>
    <fullName>Site_Plan_Link__c</fullName>
    <label>Site Plan Link</label>
    <type>Url</type>
</CustomField>