objects/Property__c/fields/Virtual_Tour_Link__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Tour_Link__c</fullName>
    <label>Virtual Tour Link</label>
    <type>Url</type>
</CustomField>