objects/Property__c/recordTypes/Mixed_Use.recordType-meta.xml
<RecordType>
    <fullName>Mixed_Use</fullName>
    <active>true</active>
    <description>Mixed Use</description>
    <label>Mixed Use</label>
</RecordType>