objects/Property__c/recordTypes/Plot.recordType-meta.xml
<RecordType>
    <fullName>Plot</fullName>
    <active>true</active>
    <description>Plot</description>
    <label>Plot</label>
</RecordType>