objects/Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Developer_Builder_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Property_Type__c</columns>
    <columns>Building_Name__c</columns>
    <columns>Launch_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>